--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "sweetalert2": "^11.3.10",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
